test/sema/positive/borrowsema/multi_immut_borrow.impala
fn f() -> () {
    let a = 3;
    let b = &a;
    let c = &a;

    if a < 4 {
        let d = &a;
    } else {
        let d = &*b;
    }

    let e = &*c;
}
