test/sema/negative/movesema/move_from_ref.impala
fn f() -> () {
    let a = ~15;
    let b: &~int = &a;
    let c = *b;
}
